minor margin and alignment fixed

--- a/player scores/style.css
+++ b/player scores/style.css
@@ -1,6 +1,7 @@
 * {
     /* Change your font family */
     font-family: sans-serif;
+    text-align: center;
 }
 
 html{
@@ -13,30 +14,27 @@ h1 {
     padding: 12px 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     font-size: 1.7em;
-    text-align: center;
 }
 
 table {
     border-collapse: collapse;
-    margin: 25px 0;
+    margin: 5px 0;
     font-size: 0.9em;
     min-width: 400px;
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    text-align: center;
 }
 
 table thead tr {
     background-color: #009879;
     color: #ffffff;
-    text-align: left;
     font-weight: bold;
 }
 
 table th,
 table td {
-    padding: 12px 15px;
+    padding: 12px 10px;
 }
 
 table tbody tr {
